# Navigation-project-code

./: .gitignore  README.md  validate_project.sh
docs/: BUILD.md  EXAMPLES.md  README.md  USAGE.md
qt_app/: CMakeLists.txt
qt_app/src/: gpsreader.cpp  gpsreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigationcontroller.cpp  navigationcontroller.h
stm32_code/Core/Inc/: gps_module.h  imu_module.h  main.h  navigation.h  usart.h
stm32_code/Core/Src/: gps_module.c  imu_module.c  main.c  navigation.c  usart.c
